--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -449,3 +449,13 @@
   year={2014},
   doi={}
 }
+
+@incollection{caha2020,
+  title={Nanosyntax: some key features},
+  author={Caha, Pavel},
+  year={2020},
+  booktitle={The Cambridge handbook of Distributed Morphology},
+  editor={Artemis Alexiadou, Ruth Kramer, Alec Marantz, Isabel-Oltra Massuet},
+  adress={Cambridge},
+  publisher={Cambridge University Press}
+}
