--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -446,8 +446,7 @@
   journal={Linguistic Analysis},
   volume={39},
   pages={245--256},
-  year={2014},
-  doi={}
+  year={2014}
 }
 
 @incollection{caha2020,
